--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,31 @@
 version: '3.1'
 services:
   stats-server:
+    build: /stats/stats-server
+    container_name: stats-server
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewmStat
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+      - DB_HOST=db
+      - DB_PORT=5432
+
 
   stats-db:
     image: postgres:14-alpine
-
-  ewm-service:
+    container_name: stats-db
     ports:
-      - "8080:8080"
+      - "6541:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=ewmStat
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
 
-  ewm-db:
-    image: postgres:14-alpine
+volumes:
+  postgres-data:
