--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.show-sql=true
@@ -14,4 +14,4 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/exploreWithMe
 spring.datasource.username=postgres
 spring.datasource.password=password
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
