--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -4,16 +4,16 @@ spring.application.name=ewm-server
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.description.sql.BasicBinder=TRACE
+logging.level.org.springframework.transaction.interceptor=INFO
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=INFO
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type.description.sql.BasicBinder=INFO
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/exploreWithMe
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.sql.init.mode=always
+spring.sql.init.mode=NEVER
