fix postman test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - "8080:8080"
     depends_on:
       - ewm-db
+      - stats-server
     environment:
       - STATS_SERVER_URL=http://localhost:9090
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmMain
