fix postman test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - ewm-db
       - stats-server
     environment:
-      - STATS_SERVER_URL=http://localhost:9090
+      - STATS_SERVER_URL=http://stats-server:9090
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmMain
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
